infra/k8s/production-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scas-frontend
  namespace: scas-prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scas-frontend
  template:
    metadata:
      labels:
        app: scas-frontend
    spec:
      containers:
        - name: frontend
          image: 869657602774.dkr.ecr.ap-south-1.amazonaws.com/scas-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: scas-frontend
  namespace: scas-prod
spec:
  selector:
    app: scas-frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
