infra/k8s/staging-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scas-backend
  namespace: scas-staging
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: scas-backend
  template:
    metadata:
      labels:
        app: scas-backend
    spec:
      containers:
        - name: backend
          image: 869657602774.dkr.ecr.ap-south-1.amazonaws.com/scas-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scas-backend
  namespace: scas-staging
spec:
  selector:
    app: scas-backend
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
