infra/k8s/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scas-staging-ingress
  namespace: scas-staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: staging.scas.rvce.edu.in
      http:
        paths:
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: scas-backend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: scas-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scas-frontend
                port:
                  number: 80
